<resources>

    <string name="core_biz_title_activity_login">登录</string>
    <string name="core_biz_title_login_tip">请使用WanAndroid账号登录！</string>
    <string name="core_biz_prompt_name">用户名</string>
    <string name="core_biz_prompt_email">邮箱</string>
    <string name="core_biz_prompt_password">密码</string>
    <string name="core_biz_action_sign_in">登录</string>
    <string name="core_biz_action_go_sign_in">去登录</string>
    <string name="core_biz_action_register">注册</string>
    <string name="core_biz_action_go_register">去注册</string>
    <string name="core_biz_title_register_tip">注册WanAndroid账号！</string>
    <string name="core_biz_prompt_password_again">再输入一次密码</string>
    <string name="core_biz_welcome">欢迎</string>
    <string name="core_biz_login_failed">登录失败</string>
    <string name="core_biz_register_failed">注册失败</string>
    <string name="core_biz_logout">退出登录</string>
    <string name="core_biz_logout_confirm">确定退出登录吗？</string>
    <string name="core_biz_logout_success">退出登录成功</string>
</resources>
